apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: qbittorrent
          image: 11notes/qbittorrent:5.2.1@sha256:51195d3f6e7e02d34f1629ceef6663becd0079b899b07d9f4b91e28f7084d245
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
            - name: bittorrent-tcp
              containerPort: 6881
            - name: bittorrent-udp
              containerPort: 6881
              protocol: UDP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /qbittorrent/etc
              subPath: etc
            - name: config
              mountPath: /qbittorrent/var
              subPath: var
            - name: media
              mountPath: /media
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: servarr-servarr-qbittorrent
        - name: media
          persistentVolumeClaim:
            claimName: servarr-jellyfin-media
        - name: tmp
          emptyDir:
            medium: Memory
