apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
